Version 2.02.182 - 
==============================
  Add After=rbdmap.service to {lvm2-activation-net,blk-availability}.service.
  Fix pvs with lvmetad to avoid too many open files from filter reads.
  Fix pvscan --cache to avoid too many open files from filter reads.
  Reduce max concurrent aios to avoid EMFILE with many devices.
  Fix lvconvert conversion attempts to linear.
  Fix lvconvert raid0/raid0_meta -> striped regression.
  Fix lvconvert --splitmirror for mirror type (2.02.178).
  Do not pair cache policy and cache metadata format.
  Fix mirrors honoring read_only_volume_list.

Version 2.02.181 - 01 August 2018
=================================
  Reject conversions on raid1 LVs with split tracked SubLVs.
  Reject conversions on raid1 split tracked SubLVs.
  Fix dmstats list failing when no regions exist.
  Reject conversions of LVs under snapshot.
  Limit suggested options on incorrect option for lvconvert subcommand.

Version 2.02.180 - 19th July 2018
=================================
  Never send any discard ioctl with test mode.
  Fix thin-pool alloc which needs same PV for data and metadata.
  Extend list of non-memlocked areas with newly linked libs.
  Enhance vgcfgrestore to check for active LVs in restored VG.
  lvconvert: provide possible layouts between linear and striped/raid
  Fix unmonitoring of merging snapshots.
  Add missing -l description in fsadm man page.
  Cache can uses metadata format 2 with cleaner policy.
  Avoid showing internal error in lvs output or pvmoved LVs.
  Fix check if resized PV can also fit metadata area.
  Reopen devices RDWR only before writing to avoid udev issues.
  Change pvresize output confusing when no resize took place.
  Fix lvmetad hanging on shutdown.
  Fix mem leak in clvmd and more coverity issues.

Version 2.02.179 - 18th June 2018
=================================
  Allow forced vgchange to lock type none on clustered VG.
  Add the report field "shared".